@@ -28,6 +28,8 @@ New Features
   dataset using simplex to reduce the error between the model and the data.
 * Added parsers for bowtie and for BLAT's PSL format
 * Table can now read/write gzipped files.
+* GeneticCode class has a getStopIndices method. Returns the index positions
+  of stop codons in a sequence for a user specified translation frame.
 
 Changes
 -------
